Add html markup

--- a/index.html
+++ b/index.html
@@ -9,5 +9,45 @@
 		<script src="./js/index.js" defer></script>
 		<title>Odin Library</title>
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<header class="header">
+				<h1 class="header__title">Odin Library</h1>
+			</header>
+
+			<section class="library">
+				<div aria-roledescription="book card" class="card">
+					<h2 class="card__title">{Title goes here}</h2>
+					<img src="#" alt="book cover" />
+					<p>{Book Author}</p>
+					<p>Pages</p>
+					<p>Has Been Read: No</p>
+				</div>
+
+				<div aria-roledescription="book card" class="card">
+					<h2 class="card__title">{Title goes here}</h2>
+					<img src="#" alt="book cover" />
+					<p>{Book Author}</p>
+					<p>Pages</p>
+					<p>Has Been Read: No</p>
+				</div>
+
+				<div aria-roledescription="book card" class="card">
+					<h2 class="card__title">{Title goes here}</h2>
+					<img src="#" alt="book cover" />
+					<p>{Book Author}</p>
+					<p>Pages</p>
+					<p>Has Been Read: No</p>
+				</div>
+
+				<div aria-roledescription="book card" class="card">
+					<h2 class="card__title">{Title goes here}</h2>
+					<img src="#" alt="book cover" />
+					<p>{Book Author}</p>
+					<p>Pages</p>
+					<p>Has Been Read: No</p>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
