Add basic css markup

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<script src="./js/index.js" defer></script>
 		<title>Odin Library</title>
 	</head>
 	<body>
-		<main>
+		<main class="content">
 			<header class="header">
 				<h1 class="header__title">Odin Library</h1>
 			</header>
@@ -29,6 +35,11 @@
 					<img src="#" alt="book cover" />
 					<p>{Book Author}</p>
 					<p>Pages</p>
+					<p>Has Been Read: No</p>
+					<p>Has Been Read: No</p>
+					<p>Has Been Read: No</p>
+					<p>Has Been Read: No</p>
+					<p>Has Been Read: No</p>
 					<p>Has Been Read: No</p>
 				</div>
 
