--- a/index.html
+++ b/index.html
@@ -21,44 +21,7 @@
 				<h1 class="header__title">Odin Library</h1>
 			</header>
 
-			<section class="library">
-				<div aria-roledescription="book card" class="card">
-					<h2 class="card__title">{Title goes here}</h2>
-					<img src="#" alt="book cover" />
-					<p>{Book Author}</p>
-					<p>Pages</p>
-					<p>Has Been Read: No</p>
-				</div>
-
-				<div aria-roledescription="book card" class="card">
-					<h2 class="card__title">{Title goes here}</h2>
-					<img src="#" alt="book cover" />
-					<p>{Book Author}</p>
-					<p>Pages</p>
-					<p>Has Been Read: No</p>
-					<p>Has Been Read: No</p>
-					<p>Has Been Read: No</p>
-					<p>Has Been Read: No</p>
-					<p>Has Been Read: No</p>
-					<p>Has Been Read: No</p>
-				</div>
-
-				<div aria-roledescription="book card" class="card">
-					<h2 class="card__title">{Title goes here}</h2>
-					<img src="#" alt="book cover" />
-					<p>{Book Author}</p>
-					<p>Pages</p>
-					<p>Has Been Read: No</p>
-				</div>
-
-				<div aria-roledescription="book card" class="card">
-					<h2 class="card__title">{Title goes here}</h2>
-					<img src="#" alt="book cover" />
-					<p>{Book Author}</p>
-					<p>Pages</p>
-					<p>Has Been Read: No</p>
-				</div>
-			</section>
+			<section class="library"></section>
 		</main>
 	</body>
 </html>
