Add form animation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 			<section class="library"></section>
 
-			<form class="form">
+			<button class="new-book">New Book</button>
+
+			<form class="form form-pre-animation">
 				<h2 class="form__title">Add New Book</h2>
 
 				<div class="form-layout-controll">
