Implement form logic to add and render books

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<input
 						class="form__input"
 						type="number"
-						id="ages"
+						id="pages"
 						name="pages"
 						required
 						aria-required="true"
@@ -65,7 +65,7 @@
 				</div>
 
 				<div class="form-layout-controll">
-					<label class="form__label" for="pet-select">Read:</label>
+					<label class="form__label" for="read-status">Read:</label>
 
 					<select
 						class="form__select"
