Add close icon to the form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 			<button class="new-book">New Book</button>
 
 			<form class="form form-pre-animation">
+				<div class="form__close-btn">
+					<div class="close-icon icon-left"></div>
+					<div class="close-icon icon-right"></div>
+				</div>
 				<h2 class="form__title">Add New Book</h2>
 
 				<div class="form-layout-controll">
