--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 
 				<button class="form__button" type="submit">Add Book</button>
 			</form>
+			<div class="flex-container">
+				<p>Krzysztof Kozak</p>
+				<a aria-roledescription="github link" class="github-icon" href="https://github.com/krzysztof-kozak/odin-library" target="_blank"><img
+						src="https://img.icons8.com/fluency/24/000000/github.png" />
+				</a>
+			</div>
+			</a>
+			</div>
 		</main>
 	</body>
 </html>
